--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-spring.datasource.url=
-spring.datasource.username=
-spring.datasource.password=
-telegram.bot.token=
+spring.datasource.url=jdbc:postgresql://localhost:5432/telegrambot
+spring.datasource.username=telegramadmin
+spring.datasource.password=tlgrmpswrd123
+telegram.bot.token=7065675260:AAHdYGNPH5EyVB77aU982TdonVzMpfj1FMk
