Add README.md and screenshot.png

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 spring.datasource.url=jdbc:postgresql://localhost:5432/telegrambot
 spring.datasource.username=telegramadmin
 spring.datasource.password=tlgrmpswrd123
-telegram.bot.token=7065675260:AAHdYGNPH5EyVB77aU982TdonVzMpfj1FMk
+telegram.bot.token=telegram_token
 
 # Hibernate ddl auto (create, create-drop, validate, update)
 spring.jpa.hibernate.ddl-auto= update
